--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,35 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
+<div class="container">
+  <div class="row mt-3">
+    <div class="col-lg-10">
+      <h2>注文履歴一覧</h2>
+    </div>
+  </div>
+
+  <div class="row mt-2">
+    <table class="table table-green table-borderless table-striped">
+      <thead>
+        <tr>
+          <th>購入日時</th>
+          <th>購入者</th>
+          <th>注文個数</th>
+          <th>注文ステータス</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @orders.each do |order| %>
+        <tr>
+          <td>
+            <%= link_to admin_oder_path(order.id) do %>
+              <%= order.created_at_strftime('%Y/%m/%d') %>
+            <% end %>
+          </td>
+          <td><%= order.customer.last_name %> <%= order.customer.first_name %></td>
+          <td><%= order.ordered_items.sum(:quantity) %></td>
+          <td>注文ステータス</td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <%= paginate @orders %>
+  </div>
+</div>
