--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,2 +1,87 @@
-<h1>Admin::Orders#show</h1>
-<p>Find me in app/views/admin/orders/show.html.erb</p>
+<div class="container" >
+  <div class="row">
+    <h2>注文履歴詳細</h2>
+  </div>
+  <div class="row">
+    <table class="table table-borderless mt-2">
+      <tr>
+        <td>購入者</td>
+        <td><%= @order.customer.last_name %> <%= @order.customer.first_name %></td>
+      </tr>
+      <tr>
+        <td>注文日</td>
+        <td><%= @order.created_at_strftime('%Y/%m/%d') %></td>
+      </tr>
+      <tr>
+        <td>配送先</td>
+        <td>
+          〒<%= @order.post_code %> <%= @order.adress %></br>
+          <%= @order.name %>
+        </td>
+      </tr>
+      <tr>
+        <td>支払方法</td>
+        <td><%= @order.payment_i18n %></td>
+      </tr>
+      <tr>
+        <td>注文ステータス</td>
+        <td>
+          <%= form_with model:@order, url:admin_order_path do |f| %>
+          <%= f.select :status,  Order.statuses.keys.map {|k| [I18n.t("enums.order.status.#{k}"), k]} %>
+          <%= f.submit "更新" , class: "btn btn-success btn-sm" %>
+          <% end %>
+        </td>
+      </tr>
+    </table>
+  </div>
+  <div class="row">
+    <div class="col">
+      <table class="table border-top border-bottom">
+        <thead class="table-green">
+          <tr>
+            <th>商品名</th>
+            <th>単価（税込）</th>
+            <th>数量</th>
+            <th>小計</th>
+            <th>製作ステータス</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @order.ordered_items.each do |ordered_item| %>
+          <tr>
+            <td><%= ordered_item.item.name %></td>
+            <td><%= (ordered_item.item.price*1.1).floor %></td>
+            <td><%= ordered_item.quantity %></td>
+            <td><%= (ordered_item.quantity*(ordered_item.item.price*1.1)).floor %></td>
+            <td>
+              <%= form_with model:ordered_item, url:admin_order_item_path(ordered_item) do |f| %>
+              <%= f.select :make_status,  OrderedItem.make_statuses.keys.map {|k| [I18n.t("enums.ordered_item.make_status.#{k}"), k]} %>
+            </td>
+            <td>
+              <%= f.submit "更新" , class: "btn btn-success btn-sm" %>
+              <% end %>
+            </td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+    <div class="col">
+      <table>
+        <tr>
+          <td>商品合計</td>
+          <td><%= (@order.total_price - @order.postage).floor %></td>
+        </tr>
+        <tr>
+          <td>送料</td>
+          <td><%= @order.postage %></td>
+        </tr>
+        <tr>
+          <td>請求金額合計</td>
+          <td><%= @order.total_price %></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
