--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -47,7 +47,7 @@
     <div class="row">
         <div class='col-11 offset-1'>
             <table class="table table-borderless">
-                <tr><th class="col-1">支払い方法</th><td class="col-10"><%= @order.payment_method %></td></tr>
+                <tr><th class="col-1">支払い方法</th><td class="col-10"><%= @order.payment %></td></tr>
                 <tr><th class="col-1">お届け先</th><td class="col-10">
                 <%= @order.post_code %>
                 <%= @order.address %>
