--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,16 +1,15 @@
 <div class="container">
     <div class="row py-2">
         <div class="col-10 offset-2">
-<h1>Public::Orders#new</h1
  <h4>注文情報入力</h4>
   <%= form_with model: @order, url: "/orders/confirm", method: :post, local: true do |f| %>  
     <h5>支払い方法</h5>
       <p>
-        <%= f.radio_button :payment_method,:クレジットカード,checked: "checked" %>  
-        <%= f.label :payment_method, "クレジットカード" %>
+        <%= f.radio_button :payment,:クレジットカード,checked: "checked" %>  
+        <%= f.label :payment, "クレジットカード" %>
        <br>
-        <%= f.radio_button :payment_method, :銀行振込 %>  
-        <%= f.label :payment_method, "銀行振込" %>
+        <%= f.radio_button :payment, :銀行振込 %>  
+        <%= f.label :payment, "銀行振込" %>
       </p>
   <%end%>
 
@@ -25,32 +24,27 @@
         <%= current_customer.address %><br>
         <%= current_customer.last_name %><%= current_customer.first_name %>
    <br>  
-<%end%>
-
-<%= form_with model: @order, url: "/orders/confirm", method: :post, local: true do |f| %> 
- <%= f.radio_button :address_option, 1 %>
-  <%= f.label :order_address, "登録済住所から選択" %>
-  <br>
-  <%= f.collection_select :customer_id, @addresses, :id, :address %>
-<%end%>
-
-<%= form_with model: @order, url: "/orders/confirm", method: :post, local: true do |f| %>
-  <%= f.radio_button :address_option, 2 %>
-    <%= f.label :order_address, "新しいお届け先" %>
-      <table> 
+   <%= f.radio_button :address_option, 1 %>
+      <%= f.label :order_address, "登録済住所から選択" %>
+      <br>
+      <%= f.select :address_id, options_from_collection_for_select(@addresses, :id, :address_display) %>
+   <br>
+   <%= f.radio_button :address_option, 2 %>
+       <%= f.label :order_address, "新しいお届け先" %>
+        <table> 
          <tr>
            <td><%= f.label :post_code, "郵便番号(ハイフンなし)" %></td>
            <td><%= f.text_field :post_code %></td>
-        </tr>
-        <tr>
+         </tr>
+         <tr>
            <td><%= f.label :address, "住所" %></td>
            <td><%= f.text_field :address %></td>
-        </tr>
+         </tr>
          <tr>
            <td><%= f.label :name, "宛名" %></td> 
            <td><%= f.text_field :name %></td>
          </tr>
-     </table>
+        </table>
    <%= f.submit "確認画面へ進む" %>
  <% end %>
        </div>
