--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,3 +1,33 @@
 <h1>Public::Orders#intex</h1>
+<div class="container">
 
-<p>Find me in app/views/public/orders/intex.html.erb</p>
+  <div class="row">
+    <div class="col">
+      <h2>注文履歴一覧</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>注文日</th>
+        <th>配送先</th>
+        <th>注文商品</th>
+        <th>支払金額</th>
+        <th>ステータス</th>
+        <th>注文詳細</th>
+      </tr>
+    </thead>
+    <% @orders.each do |order| %>
+    <tbody>
+      <tr>
+        <td><!--%= order.creaed_at.id %--></td>
+        <td><%= order.address %></td>
+        <td><!--%= order.item %--></td>
+        <td><%= order.total_price %></td>
+        <td><%= order.status %></td>
+        <td><%= link_to '表示する', order_path(order.id) %></td>
+      </tr>
+    </tbody>
+    <% end %>
+  </table>
+    </div>
+  </div>
+</div>
