--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,2 +1,27 @@
-<h1>Public::Orders#show</h1>
-<p>Find me in app/views/public/orders/show.html.erb</p>
+<h2>注文履歴詳細</h2>
+<h4>注文情報</h4>
+ <div class='col-3'>
+            <table class="table table-bordered border-dark">
+                <tr><th class="table-secondary">注文日</th><td><%=  %></td></tr>
+                <!--tr><th class="table-secondary">配送先</th><td><!--%= @order.post_code, @order.address, @order.name %--></td></tr-->
+                <tr><th class="table-secondary">支払方法</th><td><%= @order.payment %></td></tr>
+                <tr><th class="table-secondary">ステータス</th><td><%= @order.status %></td></tr>
+            </table>
+  </div>
+<h4>注文内容</h4>
+<div class='col-3'>
+            <table class="table table-bordered border-dark">
+                <tr><th class="table-secondary">注文日</th><td><%=  %></td></tr>
+                <tr><th class="table-secondary">支払方法</th><td><%= @order.payment %></td></tr>
+                <tr><th class="table-secondary">ステータス</th><td><%= @order.status %></td></tr>
+            </table>
+  </div>
+  
+  <h4>請求情報</h4>
+<div class='col-3'>
+            <table class="table table-bordered border-dark">
+                <tr><th class="table-secondary">商品合計</th><td>
+                <tr><th class="table-secondary">配送料</th><td><%= @order.postage %></td></tr>
+                <tr><th class="table-secondary">ご請求額</th><td><%= @order.total_price %></td></tr>
+            </table>
+  </div>
