--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Public::Orders#intex</h1>
+
 <div class="container">
 
   <div class="row">
@@ -13,17 +13,22 @@
         <th>支払金額</th>
         <th>ステータス</th>
         <th>注文詳細</th>
+        <th colspan="3"></th>
       </tr>
     </thead>
     <% @orders.each do |order| %>
     <tbody>
       <tr>
-        <td><!--%= order.creaed_at.id %--></td>
+        <td><%= order.created_at %></td>
         <td><%= order.address %></td>
-        <td><!--%= order.item %--></td>
+        <td>
+          <% order.ordered_items.each do |order_item| %>
+          <%= order_item.item.name %>
+          <% end %>
+        </td>
         <td><%= order.total_price %></td>
         <td><%= order.status %></td>
-        <td><%= link_to '表示する', order_path(order.id) %></td>
+        <td><%= link_to '表示する', order_path(order.id)%></td>
       </tr>
     </tbody>
     <% end %>
