--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,61 +1,91 @@
 <div class="container">
-  <div class="row">
-    <div class="col">
 
-      <% if @customer.errors.any? %>
-        <%= @customer.errors.count %>件のエラーが発生しました
-        <ul>
-          <% @customer.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-        </ul>
+  <% if @customer.errors.any? %>
+    <%= @customer.errors.count %>件のエラーが発生しました
+    <ul>
+      <% @customer.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
       <% end %>
+    </ul>
+  <% end %>
 
-      <h2 class="mt-4"><%= @customer.last_name + @customer.first_name %>さんの会員情報編集</h2>
-      <div class="form-group">
-        <%= form_with model: @customer, url:admin_customer_path, method: :patch do |f| %>
-        <div class="field">
-          <%= f.label :customer_id, "会員ID" %>
-          <%= @customer.id %>
-        </div>
-        <div class="field">
-          <%= f.label :name, "氏名" %>
-          <%= f.text_field :last_name %>
-          <%= f.text_field :first_name %>
-        </div>
-        <div class="field">
-          <%= f.label :kana_name, "フリガナ" %>
-          <%= f.text_field :kana_last_name %>
-          <%= f.text_field :kana_first_name %>
-        </div>
-        <div class="field">
-          <%= f.label :post_code, "郵便番号" %>
-          <%= f.text_field :post_code %>
-        </div>
-        <div class="field">
-          <%= f.label :address, "住所" %>
-          <%= f.text_field :address %>
-        </div>
-        <div class="field">
-          <%= f.label :telephone_number, "電話番号" %>
-          <%= f.text_field :telephone_number %>
-        </div>
-        <div class="field">
-          <%= f.label :email, "メールアドレス" %>
-          <%= f.email_field :email %>
-        </div>
-        <div class="field">
-          <%= f.label :is_deleted, "会員ステータス" %>
-          <%= f.radio_button :is_deleted, 'false' %>
-          <%= f.label :is_deleted, "有効", value: false %>
-          <%= f.radio_button :is_deleted, 'true' %>
-          <%= f.label :is_deleted, "退会", value: true %>
-        </div>
-        <div class="action">
-          <%= f.submit "変更を保存", class: "btn btn-success" %>
-        </div>
-        <% end %>
+  <h2 class="mt-4"><%= @customer.last_name + @customer.first_name %>さんの会員情報編集</h2>
+  <div class="form-group mt-5">
+    <%= form_with model: @customer, url:admin_customer_path, method: :patch do |f| %>
+    <div class="row">
+      <div class="col-lg-2">
+        <%= f.label :customer_id, "会員ID" %>
+      </div>
+      <div class="col">
+        <%= @customer.id %>
       </div>
     </div>
+    <div class="row">
+      <div class="col-lg-2">
+        <%= f.label :name, "氏名" %>
+      </div>
+      <div class="col">
+        <%= f.text_field :last_name %>
+        <%= f.text_field :first_name %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-2">
+        <%= f.label :kana_name, "フリガナ" %>
+      </div>
+      <div class="col">
+        <%= f.text_field :kana_last_name %>
+        <%= f.text_field :kana_first_name %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-2">
+        <%= f.label :post_code, "郵便番号" %>
+      </div>
+      <div class="col">
+        <%= f.text_field :post_code %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-2">
+        <%= f.label :address, "住所" %>
+      </div>
+      <div class="col">
+        <%= f.text_field :address, size: 70 %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-2">
+        <%= f.label :telephone_number, "電話番号" %>
+      </div>
+      <div class="col">
+        <%= f.text_field :telephone_number %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-2">
+        <%= f.label :email, "メールアドレス" %>
+      </div>
+      <div class="col">
+        <%= f.email_field :email %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-2">
+        <%= f.label :is_deleted, "会員ステータス" %>
+      </div>
+      <div class="col">
+        <%= f.radio_button :is_deleted, 'false' %>
+        <%= f.label :is_deleted, "有効", value: false %>
+        <%= f.radio_button :is_deleted, 'true' %>
+        <%= f.label :is_deleted, "退会", value: true %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col offset-2">
+        <%= f.submit "変更を保存", class: "btn btn-success" %>
+      </div>
+    </div>
+    <% end %>
   </div>
 </div>
