--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-10">
+    <div class="col">
       <h2 class="mt-4"><%= @customer.last_name+@customer.first_name %>さんの会員詳細</h2>
       <div>
         <table class="table mt-4">
           <thead></thead>
           <tbody>
             <tr>
-              <th class="col-md-2 offset-md-1">会員ID</th>
-              <td class="col-md-8"><%= @customer.id %></td>
+              <th class="col-lg-2 offset-lg-1 md-1">会員ID</th>
+              <td class="col-lg-8 md-2"><%= @customer.id %></td>
             </tr>
             <tr>
               <th>氏名</th>
@@ -52,8 +52,8 @@
     </div>
   </div>
     <div class="row">
-      <div class="col-md-2 offset-md-2"><%= link_to "編集する", edit_admin_customer_path, class: "btn btn-success" %></div>
-      <div class="col-md-3"><%= link_to "注文履歴一覧を見る", admin_root_path, class: "btn btn-primary" %></div>
+      <div class="col-lg-2 offset-lg-2 md-offset-0"><%= link_to "編集する", edit_admin_customer_path, class: "btn btn-success" %></div>
+      <div class="col-lg-3 md-auto"><%= link_to "注文履歴一覧を見る", admin_root_path, class: "btn btn-primary" %></div>
           
     </div>
 </div>
