--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -8,17 +8,21 @@
   </ul>
 <% end %>
 
-<%= form_with model: @address do |f| %>
-  <h4>郵便番号</h4>
-  <%= f.text_field :post_code %>
-
-  <h4>配送先住所</h4>
-  <%= f.text_area :address %>
-
-  <h4>宛名</h4>
-  <%= f.text_area :name %>
-
-  <%= f.submit '配送先登録' %>
+  <div class="form-group">
+    <%= form_with model: @address do |f| %>
+  <div class="field">
+    <%= f.label :post_code, "郵便番号(ハイフンなし)" %>
+    <%= f.text_field :post_code %>
+  </div>
+  <div class="field">
+  <%= f.label :address, "住所" %>
+  <%= f.text_field :address %>
+  </div>
+  <div class="field">
+  <%= f.label :name, "名前" %>
+  <%= f.text_field :name %>
+  </div>
+  <%= f.submit '新規登録', class: "btn btn-success" %>
 <% end %>
 
 <div class="container px-5 px-sm-0">
@@ -37,7 +41,7 @@
         </tr>
       </thead>
       <tbody>
-        <% @addresses.each do |address| %>
+        <% @customer.each do |address| %>
           <tr>
           <td>
             <%= address.post_code %>
@@ -49,7 +53,7 @@
             <%= address.name %>
           </td>
           <%= link_to "編集する", edit_address_path(address.id), class: "btn btn-success" %>
-          <%= link_to "削除する", address_path(address.id), class: "btn btn-success", method: :delete,"data-confirm" => "本当に削除しますか？" %>
+          <%= link_to "削除する", address_path(address.id), class: "btn btn-danger", method: :delete,"data-confirm" => "本当に削除しますか？" %>
           </tr>
         <% end %>
       </tbody>
