--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="row">
-    <h2 class="mt-4 bg-light">会員一覧</h2>
+    <h2 class="mt-4">会員一覧</h2>
   </div>
   <div class="row">
     <div class="col-md-10 col-md-offset-1 mx-auto">
       <table class="table table-hover">
-        <thead class="thead-light">
+        <thead class="table-green">
           <tr>
             <th>会員ID</th>
             <th>氏名</th>
