--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-    <h2 class="mt-4 bg-light"><%= @customer.last_name+@customer.first_name %>さんの会員詳細</h2>
+    <h2 class="mt-4"><%= @customer.last_name + @customer.first_name %>さんの会員詳細</h2>
   </div>
   <div class="col">
-    <table class="table mt-4">
+    <table class="table mt-4 table-borderless">
       <thead></thead>
       <tbody>
         <tr>
