--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -83,7 +83,7 @@
     </div>
     <div class="row">
       <div class="col offset-2">
-        <%= f.submit "変更を保存", class: "btn btn-success" %>
+        <%= f.submit "変更を保存", class: "btn btn-green" %>
       </div>
     </div>
     <% end %>
