--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -50,8 +50,8 @@
     </table>
   </div>
   <div class="row">
-    <div class="col-lg-2 offset-lg-2 md-offset-0"><%= link_to "編集する", edit_admin_customer_path, class: "btn btn-success" %></div>
-    <div class="col-lg-3 md-auto"><%= link_to "注文履歴一覧を見る", admin_root_path, class: "btn btn-primary" %></div>
+    <div class="col-lg-2 offset-lg-2 md-offset-0"><%= link_to "編集する", edit_admin_customer_path, class: "btn btn-green" %></div>
+    <div class="col-lg-3 md-auto"><%= link_to "注文履歴一覧を見る", admin_root_path, class: "btn btn-info" %></div>
   </div>
 </div>
 
