--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -29,7 +29,7 @@
             <td>
             <%= form_with model: cart_item, url: cart_item_path(cart_item), local: true, method: :patch do |f| %>
             <%= f.number_field :quantity, min: 1, max:10, id: "quantity_cart"%>
-            <%= f.submit "変更",class: "btn btn-success" %>
+            <%= f.submit "変更",class: "btn btn-green" %>
             <% end %>
             </td>
             <td>
@@ -61,7 +61,7 @@
     </div>
   </div>  
   <div class="row justify-content-center">
-  <td><%= link_to "情報入力に進む", new_order_path,class: "btn btn-success" %></td>
+  <td><%= link_to "情報入力に進む", new_order_path,class: "btn btn-green" %></td>
   </div>
     </div>
     </div>
