--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,34 +1,20 @@
-<div class="container">
-
-  <div class="row">
-    <div class="col">
-      <h2>商品一覧</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>商品ID</th>
-        <th>商品名</th>
-        <th>税抜価格</th>
-        <th>ジャンル</th>
-        <th>ステータス</th>
-      </tr>
-    </thead>
-    <% @items.each do |item| %>
-    <tbody>
-      <tr>
-        <td><%= item.id %></td>
-        <td><%= link_to item.name, item_path(item.id) %></td>
-        <td><%= item.price %></td>
-        <td><%= item.genre.name %></td>
-        <td>
-          <% if item.is_active == true %>
-            販売中
-          <% else %>
-            販売停止中
-          <% end %>
-        </td>
-      </tr>
-    </tbody>
-    <% end %>
-  </table>
+<div class= "container">
+    <div class='row'>
+      <div class='col-4'>
+        <h4>商品一覧</h4>
+　　　</div>
+<div class='list-wrap'>
+  <% @items.each do |item| %>
+    <div class="list-box">
+        <%= image_tag item.image, size:"200x200", class: "p-5 object-cover" %>
+        <div class= "list-comment">
+          <span><%= link_to item.name, item_path(item.id) %></span></br>
+          <span><%= item.price %></span>
+            <!--% if item.is_active == true %-->
+        </div>
+    </div>
+  <% end %>
+  <%= paginate @items %>
+</div>
+</div>
 </div>
