--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -10,7 +10,7 @@
       </tr>
       <tr>
         <td>注文日</td>
-        <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
+        <td><%= @order.created_at.strftime('%Y/%m/%d %H:%M:%S') %></td>
       </tr>
       <tr>
         <td>配送先</td>
