--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row mt-3">
     <div class="col-lg-3 offset-lg-1">
-      <h4>ジャンル編集</h4>
+      <h4 class="text-nowrap">ジャンル編集</h4>
     </div>
   </div>
 
