--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row mt-3">
     <div class="col-lg-3 offset-lg-1">
-      <h4>ジャンル一覧・追加</h4>
+      <h4 class="text-nowrap">ジャンル一覧・追加</h4>
     </div>
   </div>
 
@@ -30,7 +30,7 @@
           <% @genres.each do |genre| %>
           <tr>
             <td><%= genre.name %></td>
-            <td><%= link_to "編集する", edit_admin_genre_path(genre), class: "btn btn-green" %></td>
+            <td><%= link_to "編集する", edit_admin_genre_path(genre), class: "btn btn-green text-nowrap" %></td>
           </tr>
           <% end %>
         </tbody>
